objects/Event_Session_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <label>Attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_Name__c</fullName>
        <formula>Delegate__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <label>Delegate</label>
        <referenceTo>Delegate__c</referenceTo>
        <relationshipLabel>Booked Sessions</relationshipLabel>
        <relationshipName>Booked_Sessions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <formula>Session__r.Event_Function__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Status__c</fullName>
        <label>Invitation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Walk In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Event_Session__c</referenceTo>
        <relationshipLabel>Session Participants</relationshipLabel>
        <relationshipName>Session_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isSpeaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker</label>
        <type>Checkbox</type>
    </fields>
    <label>Session Booking</label>
    <nameField>
        <displayFormat>SB-{000000}</displayFormat>
        <label>Session Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Delegates_from_the_same_event</fullName>
        <active>true</active>
        <errorConditionFormula>Delegate__r.Event__r.Id &lt;&gt; Event_Id__c</errorConditionFormula>
        <errorMessage>You can only add delegates linked to the same event as the session</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_delegates</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()  &amp;&amp; Session__r.Number_of_Scheduled_Delegates__c &gt;= 1 &amp;&amp; ISPICKVAL(Session__r.Type__c, &apos;1 on 1&apos;) &amp;&amp;  isSpeaker__c = false</errorConditionFormula>
        <errorMessage>You cannot add more than one delegate to a 1 to 1 session</errorMessage>
    </validationRules>
</CustomObject>